<resources>
    <string name="start_game_short">Play</string>
    <string name="stop_game_short">Stop</string>
    <string name="pause_game_short">Pause</string>
    <string name="resume_game_short">Resume</string>
    <string name="same_location">Same location</string>
    <string name="same_image">Same image</string>
    <string name="same_sound">Same sound</string>
    <string name="same_letter">Same letter</string>
    <string name="home_nback">Home</string>
    <string name="game_options_short">Options</string>
    <string name="game_options_full">Game options</string>
    <string name="nback_level">N-Back level (%1$d &#x2013; %2$d)</string>
    <string name="nback_level_hint">Number of events to remember</string>
    <string name="nback_level_changed">N-Back level changed to %1$d</string>
    <string name="nback_status_level">Level %1$d</string>
    <string name="nback_interval">Milliseconds per trial</string>
    <string name="nback_interval_hint">Number of milliseconds to respond</string>
    <plurals name="nback_interval_changed">
        <item quantity="one">Changed to %d ms per trial</item>
        <item quantity="other">Changed to %d ms per trial</item>
    </plurals>
    <string name="nback_score">Score: %1$d</string>
    <string name="nback_trial_count">%1$d / %2$d</string>
    <string name="game_context">Game context</string>
    <string name="nback_symbols_long">Game symbols</string>
    <string name="nback_symbols_images">Images</string>
    <string name="nback_symbols_letters">Letters</string>
    <string name="nback_sound">Sound</string>
    <string name="nback_sound_hint">Play sound of letters</string>
    <plurals name="nback_memorize_prepare">
        <item quantity="one">Memorize and prepare\nto answer in %d turn 😊</item>
        <item quantity="other">Memorize and prepare\nto answer in %d turns 😊</item>
    </plurals>
    <string name="nback_tuto_text1">\nWelcome to the N-Back game !\n\n\n
        You will see images displayed randomly on a grid,
        \none after another.
    </string>
    <string name="nback_tuto_text2">Sometimes, the image or location
        \nwill be the same as 2 steps before.</string>
    <string name="nback_tuto_text3">Remember the image that was displayed
        \n2 steps back.
        \n\nThen click on “Same location” or “Same image”
        \nto mark points!</string>
</resources>
